// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api compileEndpoint should compile the Api Resource with embedded additional authorizer Lambda function 1`] = `
Object {
  "GraphQlApi": Object {
    "Properties": Object {
      "AdditionalAuthenticationProviders": Array [
        Object {
          "AuthenticationType": "AWS_LAMBDA",
          "LambdaAuthorizerConfig": Object {
            "AuthorizerResultTtlInSeconds": undefined,
            "AuthorizerUri": Object {
              "Fn::GetAtt": Array [
                "MyApiAuthorizerLambdaFunction",
                "Arn",
              ],
            },
            "IdentityValidationExpression": undefined,
          },
        },
      ],
      "AuthenticationType": "API_KEY",
      "Name": "MyApi",
      "Tags": Array [
        Object {
          "Key": "stage",
          "Value": "Dev",
        },
      ],
      "XrayEnabled": false,
    },
    "Type": "AWS::AppSync::GraphQLApi",
  },
}
`;

exports[`Api compileEndpoint should compile the Api Resource with embedded additional authorizer Lambda function 2`] = `
Object {
  "MyApiAuthorizer": Object {
    "handler": "index.handler",
  },
}
`;

exports[`Api compileEndpoint should compile the Api Resource with embedded authorizer Lambda function 1`] = `
Object {
  "GraphQlApi": Object {
    "Properties": Object {
      "AuthenticationType": "AWS_LAMBDA",
      "LambdaAuthorizerConfig": Object {
        "AuthorizerResultTtlInSeconds": undefined,
        "AuthorizerUri": Object {
          "Fn::GetAtt": Array [
            "MyApiAuthorizerLambdaFunction",
            "Arn",
          ],
        },
        "IdentityValidationExpression": undefined,
      },
      "Name": "MyApi",
      "Tags": Array [
        Object {
          "Key": "stage",
          "Value": "Dev",
        },
      ],
      "XrayEnabled": false,
    },
    "Type": "AWS::AppSync::GraphQLApi",
  },
}
`;

exports[`Api compileEndpoint should compile the Api Resource with embedded authorizer Lambda function 2`] = `
Object {
  "MyApiAuthorizer": Object {
    "handler": "index.handler",
  },
}
`;

exports[`Domains should generate domain resources 1`] = `
Object {
  "GraphQlDomainAssociation": Object {
    "DeletionPolicy": "Delete",
    "DependsOn": Array [
      "GraphQlDomainName",
    ],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainNameApiAssociation",
  },
  "GraphQlDomainName": Object {
    "DeletionPolicy": "Delete",
    "Properties": Object {
      "CertificateArn": "arn:aws:acm:us-east-1:1234567890:certificate/e4b6e9be-1aa7-458d-880e-069622e5be52",
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainName",
  },
  "GraphQlDomainRoute53Record": Object {
    "DeletionPolicy": "Delete",
    "Properties": Object {
      "HostedZoneName": "example.com.",
      "Name": "api.example.com",
      "ResourceRecords": Array [
        Object {
          "Fn::GetAtt": Array [
            "GraphQlDomainName",
            "AppSyncDomainName",
          ],
        },
      ],
      "TTL": 300,
      "Type": "CNAME",
    },
    "Type": "AWS::Route53::RecordSet",
  },
}
`;

exports[`Domains should generate domain resources with custom hostedZoneId 1`] = `
Object {
  "GraphQlDomainAssociation": Object {
    "DeletionPolicy": "Delete",
    "DependsOn": Array [
      "GraphQlDomainName",
    ],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainNameApiAssociation",
  },
  "GraphQlDomainName": Object {
    "DeletionPolicy": "Delete",
    "Properties": Object {
      "CertificateArn": "arn:aws:acm:us-east-1:1234567890:certificate/e4b6e9be-1aa7-458d-880e-069622e5be52",
      "DomainName": "api.example.com",
    },
    "Type": "AWS::AppSync::DomainName",
  },
  "GraphQlDomainRoute53Record": Object {
    "DeletionPolicy": "Delete",
    "Properties": Object {
      "HostedZoneId": "ABCDEFGHI",
      "Name": "api.example.com",
      "ResourceRecords": Array [
        Object {
          "Fn::GetAtt": Array [
            "GraphQlDomainName",
            "AppSyncDomainName",
          ],
        },
      ],
      "TTL": 300,
      "Type": "CNAME",
    },
    "Type": "AWS::Route53::RecordSet",
  },
}
`;

exports[`Domains should generate domain resources with custom hostedZoneName 1`] = `
Object {
  "GraphQlDomainAssociation": Object {
    "DeletionPolicy": "Delete",
    "DependsOn": Array [
      "GraphQlDomainName",
    ],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DomainName": "foo.api.example.com",
    },
    "Type": "AWS::AppSync::DomainNameApiAssociation",
  },
  "GraphQlDomainName": Object {
    "DeletionPolicy": "Delete",
    "Properties": Object {
      "CertificateArn": "arn:aws:acm:us-east-1:1234567890:certificate/e4b6e9be-1aa7-458d-880e-069622e5be52",
      "DomainName": "foo.api.example.com",
    },
    "Type": "AWS::AppSync::DomainName",
  },
  "GraphQlDomainRoute53Record": Object {
    "DeletionPolicy": "Delete",
    "Properties": Object {
      "HostedZoneName": "example.com.",
      "Name": "foo.api.example.com",
      "ResourceRecords": Array [
        Object {
          "Fn::GetAtt": Array [
            "GraphQlDomainName",
            "AppSyncDomainName",
          ],
        },
      ],
      "TTL": 300,
      "Type": "CNAME",
    },
    "Type": "AWS::Route53::RecordSet",
  },
}
`;
